# tinax

./: .gitignore  AUTHORS  CHANGES  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  design.md  index.md  installation.md  releases.md  security.md  versioning.md
docs/api/: array.md  arrays.md  checkpointing.md  data.md  debug.md  device.md  diagnostics.md  grad.md  grain.md  jit.md  nn.md  nnx.md  parallel.md  random.md  randomness.md  sharding.md  stdlib.md  weights.md
examples/: __init__.py
examples/array/: __init__.py  inspect_and_encode.py
examples/checkpointing/: __init__.py  atomic_save_restore.py
examples/chex/: __init__.py  runtime.py  static.py  traces.py
examples/data/: __init__.py  deterministic_pipelines.py  parquet_pipelines.py  records_splits_pipelines.py
examples/debug/: __init__.py  observe_nonfinite.py
examples/device/: __init__.py  runtime_info.py
examples/flax/: __init__.py  randomness.py  sharding.py  state.py  transforms.py
examples/grad/: __init__.py  value_grad_jacobian_hessian.py
examples/grain/: __init__.py  deterministic_pipelines.py
examples/jax/: __init__.py  autodiff.py  checkify.py  control_flow.py  debug_callbacks.py  jit.py  profiling.py  randomness.py  static_arguments.py  vectorization.py
examples/jit/: __init__.py  bounded_and_batched.py
examples/nn/: __init__.py  graph_lifecycle.py
examples/optax/: __init__.py  nnx_training.py  partitioning.py  schedules.py
examples/orbax/: __init__.py  atomic_resume.py
examples/parallel/: __init__.py  mesh_and_shard_map.py
examples/random/: __init__.py  derive_and_split.py
examples/stdlib/: __init__.py  cli_logging.py
examples/weights/: __init__.py  safetensors_roundtrip.py
scripts/: qc.sh  rmpycache.sh
tests/: conftest.py
tests/integration/: test_checkpoint_resume.py  test_data_workers.py  test_debug.py  test_diagnostics.py  test_dlpack.py  test_grain_workers.py  test_hardware_contracts.py  test_legacy_v0.py  test_nn_parallel.py  test_nnx_sharding.py  test_safetensors.py  test_shard_map.py
tests/unit/: test_array.py  test_arrays.py  test_checkpointing.py  test_data.py  test_data_parquet.py  test_data_records.py  test_data_splits.py  (+17 more)
tinax/: __init__.py
(+69 files in other folders)
